# substrate-parachain-template

./: Dockerfile  docker-compose.validator01.yml  docker-compose.validator02.yml  docker-compose.yml
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/chips/: Cargo.toml
pallets/chips/src/: mock.rs
pallets/gamecenter/: Cargo.toml
pallets/gamecenter/src/: lib.rs
pallets/gametemplates/: Cargo.toml
pallets/gametemplates-guess-hash/: Cargo.toml
pallets/gametemplates-guess-hash/src/: lib.rs  mock.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: docker_entrypoint.sh
